--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,12 @@
     margin-top: -27px;
     color: #ef3b49;
   }
+   
+  #todayDate {
+    color: white;
+    font-size: 20px;
+    margin-top: -27px;
+  }
   
   div.current-temperature {
     margin-top: -27px;
@@ -62,14 +68,16 @@
   }
   
   div.current-weather-sticker {
-    margin-bottom: 0px;
+    margin-bottom: -15px;
   }
   
-  #todayDate {
+  ul {
+    list-style: none;
     color: white;
-    font-size: 20px;
-    margin-top: -27px;
+    font-size: 16px;
   }
+
+
   
   .card:hover{
     background: rgba(241, 59, 72, 0.1);
